--- a/striker.conf
+++ b/striker.conf
@@ -40,10 +40,6 @@ smtp::encrypt_pass		=	1
 # This is the domain given to the mail server when establishing the connection.
 smtp::helo_domain		=	example.com
 
-# This is a comma-separated list of email recipients. Please use bare email
-# addresses only.
-mail_data::to			=	you@example.com
-
 # This sets the "sending domain" when sending email. It should match
 # smtp::server in most cases.
 mail_data::sending_domain	=	example.com
@@ -86,6 +82,48 @@ scancore::db::2::name			=	scancore
 scancore::db::2::user			=	striker
 scancore::db::2::password		=	secret
 scancore::db::2::initialize		=	1
+
+# This controls who gets alerts. The available alert options are:
+# 
+# - debug;    Useful for trying to solve problems and should only be logged.
+#             This will generate an alert on just about every state change.
+# - info;     This level will generate an alert on events that are almost
+#             always harmless.
+# - notice;   This is the lowest alert level that most people will actually
+#             want to use. It includes events like migrations, servers booting,
+#             BBU/FBU self tests, etc.
+# - warning;  Most technical staff will want to receive these alerts. Any state
+#             change that could indicate an interruption will use this alert
+#             level.
+#             NOTE: This is the default level
+# - critical; This alert level will be of interest to non-technical users, like
+#             managers. Alerts at this level almost always indicate a serious
+#             event has occured, like a node being lost/fenced, thermal shut
+#             down occuring and so forth.
+#
+# A user who is listening to a given alert level will also receive all higher
+# level warnings.
+# 
+# Alert recipients can either be 'email' or 'file'. The 'email' type are meant
+# for humans to receive and are dispatched via a local postfix relay. The
+# 'file' type records alerts to the specified file which sits on the local
+# disk until it is collected by a person or program.
+# 
+# E-mail recipients are entered in the following format:
+#alerts::recipient::1::email		=	name="Madison Kelly",email="mkelly@alteeve.ca",language="en_CA",level="notice"
+#
+# File recipients are entered in the following format:
+#alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",languagge="en_CA",level="info"
+#
+# What is important is that the integer after 'alerts::recipient::X' is unique.
+# 
+# NOTE: If a language is selected but not supported, the alert will fall back
+#       to 'en_CA'. Please be sure all the scan agents you plan to use, along
+#       with ScanCore itself, have the appropriate language strings before you
+#       use them!
+# 
+alerts::recipient::1::email		=	name="Madison Kelly",email="debug@alteeve.ca",language="en_CA",level="notice"
+alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",languagge="en_CA",level="info"
 
 
 ###############################################################################
