* Changed a good number of log entries in ScanCore and scan-clustat to use log level 3. * Fixed a bug in AN::Tools::DB so that the connect_to_database() method wouldn't try to query a database that failed to connect. * Started work on the updated scan-apc-ups agent. Got the OIDs layed out and the initial SQL schema framed up. * Fixed a couple minor bugs in the old an-cm so that it ran properly from /sbin/striker/ and used the default DB name and password set by striker-installer.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -72,15 +72,15 @@ mail_data::sending_domain	=	example.com
 scancore::db::1::host			=	an-striker01.alteeve.ca
 scancore::db::1::port			=	5432
 scancore::db::1::name			=	scancore
-scancore::db::1::user			=	striker
-scancore::db::1::password		=	secret
+scancore::db::1::user			=	admin
+scancore::db::1::password		=	Initial1
 scancore::db::1::initialize		=	1
 
 scancore::db::2::host			=	an-striker02.alteeve.ca
 scancore::db::2::port			=	5432
 scancore::db::2::name			=	scancore
-scancore::db::2::user			=	striker
-scancore::db::2::password		=	secret
+scancore::db::2::user			=	admin
+scancore::db::2::password		=	Initial1
 scancore::db::2::initialize		=	1
 
 # This controls who gets alerts. The available alert options are:
