The "Woohoo!!" commit!
ScanCore now properly shuts down when the strongest UPS drops below the set minimum runtime and automatically reboots the nodes once power is restored and the strongest UPS crosses over the minimum percent charged.

* Added a catch and message when connecting to a database fails because the hostname couldn't be resolved.
* Added and cleaned up a bunch of logging.
* Added a check to had ScanCore exit entirely if a node/dashboard is trying to connect to the databases, one of the connections fails and there is no existing entry in hosts for that machine. This is likely caused by a configuration error so "fail early, fail often" applies.
* ScanCore now knows properly how to tell if it's a node or a dashboard. If it is a dashboard, it now knows how to read the information needed to check/boot nodes via it's cache files.
* Set the default scancore::minimum_safe_charge to '45%' and added a comprehensive (I think) explanation it striker.conf explain to a user how to choose the lowest safe percentage in their environment.
* Finished writing ScanCore's do_post_scan_dashboard_tasks() function!
** It first checks to see if any nodes have gone into 'emergency_stop'. If not, it exits.
** If so, it then looks to see if it has it's cache directory. If not, it exits.
** If so, it reads in all found cache files and records each node's 'power_check_command'. It reads in the rest of the cache, too, in case it proves useful down the road.
** It then reads in its entries in the 'power' table to get an updated view of the UPSes it knows about (can't trust the node's entries because they stopped updating when the nodes went sleepy)..
** Have a place-holder for checking the temperature, that will be used when scan-ipmi and/or scan-megacli is done.
** It then loops through each node that has gone into e-stop.
*** It checks the UPSes powering the node by comparing it's list of UPSes against the UPSes in the database pointing to the node. If one or more is found, it then

--- a/striker.conf
+++ b/striker.conf
@@ -83,6 +83,56 @@ scancore::db::2::user			=	admin
 scancore::db::2::password		=	Initial1
 scancore::db::2::initialize		=	1
 
+
+# ScanCore will power down an Anvil! when the UPSes powering it lose input 
+# power and drain below a minimum estimated hold up time. When the power is
+# restored, the nodes will be booted once one of the UPSes has a minimum
+# charge percentage.
+# 
+# By default, the minimum hold-up time when running on batteries is set to
+# 10 minutes (600 seconds). The default minimum charge percentage to boot back
+# up is 45%. 
+# 
+# You may want to adjust this to better suit your needs, however. 
+# 
+# Your minimum hold-up time should be the time it takes to perform a 
+# "Cold Shut Down" from Striker, with all of your servers running, plus a
+# little extra time as a buffer. This will ensure that your Anvil! will safely
+# power down before the UPSes completely deplete.
+# 
+# The minimum charge percentage should be set to a high enough number to handle
+# losing powert during the boot process. To know this percentage depends a lot
+# on your environment. To calculate it, look at the load on your UPSes under
+# normal operation (as a number of watts). Then consult your UPS's "Runtime" or
+# "Hold-Up Time" chart. This will tell you how many minutes your UPS will run 
+# given your load and a full charge. Divide the time you need to fully boot and
+# then shut down your Anvil! by the runtime at full charge for your load. 
+# Multiply the result by 100 to get your minimum charge percentage.
+# 
+# For example;
+# 
+# Assume you need 15 minutes at worst from the time you start to boot your 
+# Anvil! until you can shut it back down. Also assume you have an average 400w
+# load on an APC SmartUPS 1500 UPS.
+# 
+# Looking at the "Batteries & Runtime" chart here:
+# http://www.apc.com/resource/include/techspec_index.cfm?base_sku=SMT1500RM2U
+# We see that a full charge can hold up a 400w load for 37 minutes. 
+# 
+# Knowing this, we have: ((15 % 37) x 100) == 40.5%. We'll pad this to 45%
+# 
+# To configure this manually, uncomment the lines below. The 
+# 'scancore::minimum_ups_runtime' is the number of seconds and 
+# 'scancore::minimum_safe_charge' is the percentage (without the % sign).
+#
+#scancore::minimum_ups_runtime		=	600
+#scancore::minimum_safe_charge		=	45
+
+
+##############################################################################
+# ScanCore Alert Targets                                                     #
+##############################################################################
+
 # This controls who gets alerts. The available alert options are:
 # 
 # - debug;    Useful for trying to solve problems and should only be logged.
