--- a/striker.conf
+++ b/striker.conf
@@ -183,52 +183,20 @@ alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",languagge="en_CA"
 ### Overview
 # 
 # This control how USB mass storage devices will be managed when plugged into
-# given physical USB ports. The second field in each section is the USB address
-# of the USB port to be managed.
+# given physical USB ports. It provides a mechanism for mounting a USB drive on
+# a server running linux as though the USB drive had been plugged into the 
+# server directly, from the user's perspective.
 # 
-# When a drive is plugged into a managed USB port, it's filesystem(s) will be
-# mounted locally. Then striker will log into a target machine over SSH and use
-# sshfs to mount the inserted partition(s) on that target machine.
+# It works by mounting a USB storage locally, then connecting to the target
+# server and uses sshfs to mount it on the target. In this way, the drive will
+# appear automatically on the user's desktop (or at a defined mount point)
+# automatically, and clean itself up automatically, when a USB drive is
+# inserted or removed from the host.
 # 
-###############################################################################
-# Remote Server Requirements:
-# 
-# Target servers requires the following to be done (for RHEL/CentOS 6, may
-# differ for other distros).
-# 
-# Available in the AN!Repo: https://alteeve.ca/an-repo/el6/
-# - yum install sshfs
-#
-# Or otherwise give the remote user permissions to create sub-directories
-# - chmod 777 /media
-# 
-# Give the user access to fuse
-# - usermod -a -G fuse <remote_user>
-###############################################################################
-# 
-# To determin the port address, open a terminal and run:
-#   tail -f /var/log/messages
-# 
-# When the USB drive is plugged into a port, you will see a message like:
-# 
-# ====
-# Mar  2 21:23:50 an-striker01 kernel: usb 1-3: new high speed USB device number 7 using ehci_hcd
-# Mar  2 21:23:51 an-striker01 kernel: usb 1-3: New USB device found, idVendor=174c, idProduct=55aa
-# Mar  2 21:23:51 an-striker01 kernel: usb 1-3: New USB device strings: Mfr=2, Product=3, SerialNumber=1
-# Mar  2 21:23:51 an-striker01 kernel: usb 1-3: Product: AS2105
-# Mar  2 21:23:51 an-striker01 kernel: usb 1-3: Manufacturer: ASMedia
-# Mar  2 21:23:51 an-striker01 kernel: usb 1-3: SerialNumber: 0123456789ABCDEF
-# Mar  2 21:23:51 an-striker01 kernel: usb 1-3: configuration #1 chosen from 1 choice
-# ====
-# 
-# The USB address in the above example is "1-3". Knowing this, the variable
-# names used below will start with 'usb::1-3::...'. 
-# 
-# If a mass storage device is plugged into any USB port not specified here,
-# striker-usb will simply ignore it.
-# 
-### NOTE: In some cases, the USB address can be in the format 'X-Y.Z'. This is
-###       OK and it is supported.
+# It also supports LUKS encrypted USB drives, including the ability to setup
+# encryption on the USB drive if it is not yet encrypted, for you. This does
+# require storing the USB drive's passphrase on this machine, so caution is
+# required when used this way.
 
 ### Variables
 #
@@ -245,6 +213,11 @@ alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",languagge="en_CA"
 local::host			=	10.255.4.3
 local::user			=	root
 local::password			=	secret
+
+# This is set to '1' when you want to enable this feature. When using 
+# auto-encryption, be careful to only enable this when there is low risk of a
+# user accidentally inserting a USB drive they don't want reformated!
+local::enable_remote_usb_mount	=	1
 
 # It is possible to decrypt LUKS-encrypted partition, provided the LUKS key is
 # provided. At this time, only one global LUKS key is supported. Enter it in
@@ -275,47 +248,6 @@ luks::fs_options		=	-L #!variable!fs_label!#
 # matches the value to the left of the '*' here. The string *is* case 
 # sensitive.
 luks::protected_label		=	c*
-
-
-# Local directory to mount the inserted device on. If the specified directory
-# does exit, it will be created. If multiple partitions exist on the inserted
-# USB drive, the first partition will mount with the given name and each
-# subsequent partition will have '-X' added to the mount directory, where X is
-# an integer starting at '1'.
-#
-#usb::X-Y::local_mount
-#
-# This is the host name or IP address that the remote machine.
-# 
-#usb::X-Y::sshfs::host
-# 
-# This is the user name and password used when ssh'ing into the remote machine.
-# 
-#usb::X-Y::sshfs::user
-#usb::X-Y::sshfs::password
-#
-# This is the directory to mount point to use on the remote machine
-#
-#usb::X-Y::sshfs::remote_mount	=	/media/an-striker01-1-1
-# 
-
-### Examples
-#
-# Note: In this example, the server's host name is 'an-striker01'.
-#
-# Front panel, furthest left.
-usb::1-3::local_mount		=	/mnt/1-3
-usb::1-3::sshfs::remote_mount	=	/media/an-striker01-1-3
-usb::1-3::sshfs::host		=	vm01-foo.alteeve.ca
-usb::1-3::sshfs::user		=	digimer
-usb::1-3::sshfs::password	=	secret
-
-# Front panel, second from left, non-standard port.
-usb::1-1::local_mount		=	/mnt/1-1
-usb::1-1::sshfs::remote_mount	=	/media/an-striker01-1-1
-usb::1-1::sshfs::host		=	vm02-bar.alteeve.ca:22000
-usb::1-1::sshfs::user		=	digimer
-usb::1-1::sshfs::password	=	secret
 
 
 ###############################################################################
