* Started adding support to ScanCore to handle translating metric units (celsius to fahrenheit, specifically) for users who prefer imperial measurements. * Added the ability to let users specify default thermal sensor thresholds. Also added support for letting the user set different thermal sensor shutdown weights as well. * Added the translation of IPMI sensor names to plain-language sensor names. * Removed the 'temperature_jumped' column from the 'temperature' table as we aren't using it there now. * Added the logic to add warning and critical temperatures to the 'temperature' table. * Added a new column to 'clustat_services' for notes, which users will later be able to use to record notes about their servers. For now, the column exists and nothing else.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -129,6 +129,68 @@ scancore::db::2::initialize		=	1
 #scancore::minimum_safe_charge		=	45
 
 
+# Each sensor has a default "weight" of '1'. When ScanCore finishes a cycle,
+# it will look at the number of sensors that have gone above their high 
+# critical threshold, or below their low critical threshold, and add up their
+# weights. If the total value is equal to or greater than this shutdown limit,
+# ScanCore will initiate a withdrawl and power down of the node.
+scancore::temperature::shutdown_limit	=	5
+
+
+##############################################################################
+# ScanCore - Scan Agent Overrides                                            #
+##############################################################################
+
+### scan-ipmitool
+# Where possible, the upper and lower temperature sensor values are pulled from
+# the IPMI sensor data itself. Some sensor values do not specify their upper
+# and lower sensor values, however. In this case, scan-ipmitool uses the 
+# following default limits (all in °C!):
+# high_warning	=	50
+# high_critical	=	55
+# low_warning	=	5
+# low_critical	=	0
+# 
+# To catch sudden increases in temperature, usually indicative of an AC
+# failure, we set a "jump" of 'delta' value. If the temperature of a sensor
+# increases by more than this number of degrees celsius, a "sudden change"
+# alert will be generated.
+# The default 'jump' value is 5°C between two scans, typically 30 seconds or
+# so.
+# 
+# If you want to use a different set of defaults, you can do so by uncommenting
+# and editing the following variables:
+#scan-ipmitool::thresholds::default::high_warning	=	50
+#scan-ipmitool::thresholds::default::high_critical	=	55
+#scan-ipmitool::thresholds::default::low_warning	=	5
+#scan-ipmitool::thresholds::default::low_critical	=	0
+#scan-ipmitool::thresholds::default::jump		=	5
+
+# To override the thresholds of a single sensor, you can do so using the sensor
+# name reported by 'ipmitool'. To get a list of the sensors and their names,
+# you can use the command (from a linux machine):
+# 
+# ipmitool -H an-a05n01.ipmi -U admin sensor list all
+# 
+# Replace 'an-a05n01.ipmi' with the hostname or IP of your IPMI device.
+# Replace 'admin' with the IPMI user name for your IPMI device.
+# Enter the IPMI user's password when prompted.
+#
+# NOTE: Be sure to match the sensor name exactly!
+# 
+# As an example, if you wanted to manually adjust the threshold 'Ambient' 
+# threshold, you can use the following;
+#scan-ipmitool::thresholds::Ambient::high_warning	=	50
+#scan-ipmitool::thresholds::Ambient::high_critical	=	55
+#scan-ipmitool::thresholds::Ambient::low_warning	=	5
+#scan-ipmitool::thresholds::Ambient::low_critical	=	0
+#scan-ipmitool::thresholds::Ambient::jump		=	5
+#
+# You can adjust the weight of a given sensor (up or down) using 'weight',
+# expressed as a whole or real number.
+#scan-ipmitool::thresholds::Ambient::weight		=	1.5
+
+
 ##############################################################################
 # ScanCore Alert Targets                                                     #
 ##############################################################################
@@ -159,11 +221,16 @@ scancore::db::2::initialize		=	1
 # 'file' type records alerts to the specified file which sits on the local
 # disk until it is collected by a person or program.
 # 
+# By default, metric units are used in reporting values. If the user prefers
+# imperial measurements (ie: Fahrenheit instead of Celsius for temperatures),
+# you can use 'units=imperial'.
+# 
 # E-mail recipients are entered in the following format:
 #alerts::recipient::1::email		=	name="Madison Kelly",email="mkelly@alteeve.ca",language="en_CA",level="notice"
 #
-# File recipients are entered in the following format:
-#alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",languagge="en_CA",level="info"
+# File recipients are entered in the following format, with "imperial"
+# measurements selected as an example:
+#alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",languagge="en_CA",level="info",units=imperial
 #
 # What is important is that the integer after 'alerts::recipient::X' is unique.
 # 
@@ -173,7 +240,7 @@ scancore::db::2::initialize		=	1
 #       use them!
 # 
 alerts::recipient::1::email		=	name="Madison Kelly",email="debug@alteeve.ca",language="en_CA",level="notice"
-alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",languagge="en_CA",level="info"
+alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",languagge="en_CA",level="info",units=imperial
 
 
 ###############################################################################
