* Fixed the special double-bang replacement string for handling sensor name and value translations from using a comma to a colon as it was conflicting with split'ing the various variable/value pairs in the 'alerts' table. * Silenced a bunch of logs now that testing is well under way and I know they're not a current issue. * Cleaned up a bunch of formatting. * Fixed multiple bugs related to reporting IPMI sensor change alerts, as well as finished adding alerts to new and updated sensor values. More logic is needed for better messaging of non-temperature related changes, though. * Fixed a bug where celsius sensor values were being converted to fahrenheit, and the C/F suffix was inverted. * Changed all of the SQL schemas so that numeric data types (int, bigint and double precision) are now 'numerica', *except* for 'X_id' columns, so that floats with trailing 0s (ie: 1.250) don't lose the trailing zero when read back. This solves a problem where sensor values that had not changed between runs were being updated needlessly. * Fixed some SQL queries in scan-ipmitool to restrict queries/updates to the sensor's host. * Fixed a bug that was preventing entries to be added to the 'temperature' table. * Added a 'defined' check to some variables read in from the IPMI sensor data so that variables that didn't exist don't cause needless warnings to be printed to STDOUT. * Added the machine name to AN::Tools::Alert::check_alert_sent() method calls in scan-ipmitool to differentiate alerts from one node's sensors from the other node's sensors. * Added a buffer/hyeristics to temperature sensor thresholds to avoid repeated alerts when a sensor is floating on a threshold. Also made this user-definable. * Added timing logging to the actual IPMI calls. * Added 'percentage of free space'-based disk allocation to Striker's server provisioning. So now a user can provision a new server to use X% of the remaining free space in a pool, rather than always assigning a static value or using the 'a

--- a/striker.conf
+++ b/striker.conf
@@ -158,6 +158,12 @@ scancore::temperature::shutdown_limit	=	5
 # The default 'jump' value is 5°C between two scans, typically 30 seconds or
 # so.
 # 
+# To avoid repeated alerts when a thermal sensor is hovering around a 
+# threshold, a buffer is used. For an alert to clear, a sensor must drop or 
+# rise 2*C below or above and high or low threshold, respectively. For example,
+# if a sensor goes into warning at 50*C, it must drop below 48*C for the alert
+# to be cleared.
+# 
 # If you want to use a different set of defaults, you can do so by uncommenting
 # and editing the following variables:
 #scan-ipmitool::thresholds::default::high_warning	=	50
@@ -165,6 +171,7 @@ scancore::temperature::shutdown_limit	=	5
 #scan-ipmitool::thresholds::default::low_warning	=	5
 #scan-ipmitool::thresholds::default::low_critical	=	0
 #scan-ipmitool::thresholds::default::jump		=	5
+#scan-ipmitool::thresholds::default::buffer		=	2
 
 # To override the thresholds of a single sensor, you can do so using the sensor
 # name reported by 'ipmitool'. To get a list of the sensors and their names,
@@ -185,6 +192,7 @@ scancore::temperature::shutdown_limit	=	5
 #scan-ipmitool::thresholds::Ambient::low_warning	=	5
 #scan-ipmitool::thresholds::Ambient::low_critical	=	0
 #scan-ipmitool::thresholds::Ambient::jump		=	5
+#scan-ipmitool::thresholds::Ambient::buffer		=	2
 #
 # You can adjust the weight of a given sensor (up or down) using 'weight',
 # expressed as a whole or real number.
