*Major* milestone! ScanCore now automatically recovers a node that has gone into a thermal shutdown once it believes it to be safe to do so. Details on the logic are in 'striker.conf' in this commit.
* Added the ability to disable the automatic shutdown of a node based on low power and/or temperature events.
* Made the time to delay recovery based on the number of recent temperature-based shutdowns configurable.
* Added a check where a dashboard checks its own temperature when deciding if it is safe to boot a thermally-downed node.
* Cleaned up and added some logging.
* Added 'host_stop_reason' to ScanCore's 'hosts' file so that the database could differentiate thermally-trigger emergency stops from power-based emergency stops.
* Fixed how I was tracking temperature sensor values in ScanCore's check_node_temperature_health() function to properly mark the host that recoded the sensor value from the machine where the sensor reading came from.
* Made it so that dashboards will always record a node's 'Ambient' and 'Systemboard' temperatures (or whatever sensor names the user desires via 'scan-ipmitool::offline_sensor_list') in the 'temperature' table. These are usually 'ok', so I needed to adjust ScanCore to not treat the mere existance of an entry as a bad thing, but instead to check the 'temperature_state' column to see if it's not 'ok'.
* Added the functions to count how many times in the last six hours and set the appropriate delay before rebooting the node (assuming the dashboard's temps are OK as well as the node's Ambient/Systemboard temps).
* Fixed a few bugs where tables were being UPDATEd without setting the 'modified_date' column.
* Moved the 'process_temperature()' function call in scan-ipmitool machine loop to make sure values are processed after each machine is scanned.
* Fixed a bug in 'process_temperature()' where new and old values where not stored with the 'machine' variable to separate the different machines.
* Added a check and plain-language error m

--- a/striker.conf
+++ b/striker.conf
@@ -84,6 +84,26 @@ scancore::db::2::password		=	Initial1
 scancore::db::2::initialize		=	1
 
 
+# ScanCore can trigger a shutdown of a node for two reasons; Overheating and
+# insufficient remaining runtime in batteries. The former protects your nodes
+# from potential damage. Both provide a mechanism for gracefully shutting down
+# the hosted virtual machines gracefully and cleanly powering down the nodes
+# *before* they would shut down anyway from loss of power or hardware-based
+# over-temperature shutdown.
+# 
+# Obviously, this means that ScanCore can potentially screw up and take the
+# nodes offline if there was a bug. We don't pretend to be perfect.
+# 
+# If you want to disable this automatic shutdown feature, you can do so by 
+# setting these variables to '1'.
+scancore::disable::power_shutdown	=	0
+scancore::disable::thermal_shutdown	=	0
+
+
+###############################
+# Power Shutdown Variables    #
+###############################
+
 # ScanCore will power down an Anvil! when the UPSes powering it lose input 
 # power and drain below a minimum estimated hold up time. When the power is
 # restored, the nodes will be booted once one of the UPSes has a minimum
@@ -129,12 +149,57 @@ scancore::db::2::initialize		=	1
 #scancore::minimum_safe_charge		=	45
 
 
+###############################
+# Thermal Shutdown Variables  #
+###############################
+
 # Each sensor has a default "weight" of '1'. When ScanCore finishes a cycle,
 # it will look at the number of sensors that have gone above their high 
 # critical threshold, or below their low critical threshold, and add up their
 # weights. If the total value is equal to or greater than this shutdown limit,
 # ScanCore will initiate a withdrawl and power down of the node.
 scancore::temperature::shutdown_limit	=	5
+
+# When a node goes into thermal shutdown, many of it's temperature (and other)
+# sensors go offline. So a dashboard has a limited ability to determine if it
+# is safe to boot a node back up. 
+# 
+# To account for this, when a node is in a thermal emergency stop, the 
+# dashboard will check it's own temperature (if it has temp sensors) and if it
+# is OK, it will read the node's 'Ambient' and 'Systemboard' (or the sensors
+# defined by you in 'scan-ipmitool::offline_sensor_list' (or similar from other
+# scan agents). 
+# 
+# If those sensors on the target node are OK, then the last step is to count
+# how many times in the last six hours the node went into thermal shutdown. The
+# more times it has gone into thermal shutdown, the longer it waits before
+# booting the node. By default, the delays are:
+# 
+# Reboots | Wait X seconds until boot
+# --------+--------------------------
+#  1      | 600   (10 minutes)
+#  2      | 1800  (30 minutes)
+#  3      | 3600  (1 hour)
+#  4      | 7200  (2 hours)
+#  >4     | 21600 (6 hours)
+# --------+--------------------------
+# 
+# The goal here is to minimize the risk of damage to the hardware. ScanCore
+# tries to shutdown a node before it goes into hardware-thermal shutdown and
+# before damage can occur, but it's not perfect. It is possible that thermal
+# shutdown is disabled in the BIOS and that the graceful shutdown of the node
+# could take too long and damage could occur. This increasing delay is 
+# designed to help minimize the risk of a chronic failure in the node causing
+# the node to repeatedly be put at risk.
+# 
+# The trade off, of course, is increased downtime. Particularly if both nodes
+# went into shutdown. So it is possible for you to override the default timing
+# using the variables below.
+#scancore::thermal_reboot_delay::1	=	600
+#scancore::thermal_reboot_delay::2	=	1800
+#scancore::thermal_reboot_delay::3	=	3600
+#scancore::thermal_reboot_delay::4	=	7200
+#scancore::thermal_reboot_delay::more	=	21600
 
 
 ##############################################################################
@@ -197,6 +262,65 @@ scancore::temperature::shutdown_limit	=	5
 # You can adjust the weight of a given sensor (up or down) using 'weight',
 # expressed as a whole or real number.
 #scan-ipmitool::thresholds::Ambient::weight		=	1.5
+
+
+# When a node is shut down because the temperature got too high or low, most
+# of the thermal sensors stop reporting data. In most cases, though, the
+# 'Ambient' and 'Systemboard' remain readable. By default, the dashboard will
+# check it's own temperature and, if that is OK, check these sensors on the
+# target node to determine if the node is safe to boot back up. If your nodes
+# use different names, or if you have access to additional sensors, you can
+# change the list of sensors checked by specifying them here as a 
+# comma-separated list.
+# 
+# NOTE! The sensor names are case-sensitive and must match exactly to the 
+#       output show in ipmitool!
+#
+# To determine which sensor values are available when your nodes are off, you
+# can run the following command from the Striker dashboard:
+# 
+# ipmitool -H <node_ipmi_ip> -U <ipmi_user> sensor list all | grep 'degrees C'
+#
+#==== 
+#Ambient          | 25.000     | degrees C  | ok    | na        | 1.000     | 6.000     | 37.000    | 42.000    | na        
+#Systemboard      | 35.000     | degrees C  | ok    | na        | na        | na        | 65.000    | 70.000    | na        
+#==== 
+# If you have different hardware nodes, and the sensors differ between them,
+# list all of the sensors here. Once that are not found will be ignored.
+#scan-ipmitool::offline_sensor_list			=	Ambient,Systemboard
+
+
+# Most Striker Dashboards run commodity hardware and, thus, do not have IPMI.
+# When a dashboard does have IPMI, it can make a much more informed decision
+# about whether it is safe to boot a node that has gone into thermal shutdown
+# because it will be able to check all of it's own sensors. If any are in a
+# 'warning' state, it will not boot the nodes. This is excellent when dealing
+# with a data center or room that has lost cooling.
+# 
+# If your dashboards do have IPMI, you can tell scan-ipmitool about how to 
+# access it using:
+# 
+#scan-ipmitool::machine::<hostname>::power_check_command = <fence_ipmilan call>
+# 
+# The 'fence_ipmilan' command is the command used by Striker dashboards to
+# check the state of and to control the nodes. Generally, the command looks
+# like this:
+# 
+#fence_ipmilan -a <ipmi_ip> -l <ipmi_user> -p <password> -o status
+# 
+# Try this call out on the dashboard to see if you can get the power state of
+# the machine. It should return:
+# 
+#Status: ON
+# 
+# If it doesn't, please read 'man fence_ipmilan' to see what other switches you
+# might need to be able to read it. 
+# 
+# Once you can read the status, remove the '-o status' and use the rest of the
+# command as the value for this variable. Here is an example for the Striker
+# dashboard called 'an-striker01.alteeve.ca':
+# 
+#scan-ipmitool::machine::an-striker01.alteeve.ca::power_check_command	=	fence_ipmilan -a an-striker01.ipmi -l admin -p Initial1
 
 
 ##############################################################################
